# OS-ex4

./: CMakeLists.txt  aligned_buffer.h.gcov  allocated_ptr.h.gcov  callgrind_report.txt  isEulerian.cpp  move.h.gcov  new.gcov  new_allocator.h.gcov  q4.4  q4.4mem  stl_list.h.gcov
coverage_report/: index-sort-l.html  index.html
coverage_report/13/: index-sort-f.html  index-sort-l.html  new.func-c.html
coverage_report/13/bits/: alloc_traits.h.gcov.html  allocated_ptr.h.gcov.html  allocator.h.func-c.html  allocator.h.func.html  allocator.h.gcov.html  index-sort-l.html  list.tcc.func-c.html  move.h.func-c.html  move.h.func.html  new_allocator.h.func-c.html  new_allocator.h.gcov.html  stl_list.h.func-c.html  stl_list.h.func.html  stl_list.h.gcov.html
coverage_report/13/ext/: index-sort-f.html
part1/: alloc_traits.h.gcov  allocator.h.gcov  callgrind.out.47399  coverage.info  isEulerian.cpp.gcov  list.tcc.gcov  q4  q4.4-isEulerian.gcda  q4.4-isEulerian.gcno  valgrind_memcheck.txt
part1/coverage_report/: index-sort-f.html
part1/coverage_report/13/: index.html  new.func.html  new.gcov.html
part1/q4.5-4.6/: q4.5-log.txt
part1/q4.7/: race-log.txt
part2/: ASingletonDCLO.h  ASingletonGUARD.h  ScopeMutex.h
part2/doc/html/: ASingletonDCLO_8h.html  ASingletonDCLO_8h.js  ASingletonDCLO_8h__incl.map  ASingletonDCLO_8h__incl.md5  ASingletonDCLO_8h_source.html  ASingletonGUARD_8h.html  ASingletonGUARD_8h.js  ASingletonGUARD_8h__incl.map  ASingletonGUARD_8h__incl.md5  ASingletonGUARD_8h_source.html  ScopeMutex_8h.html  classes.html  (+32 more)
q4.5-4.6/: hello  hello.c
q4.7/: race
(+35 files in other folders)
